2005-07-07  Tim Waugh <twaugh@redhat.co m>

	* printer/HP-LaserJet_3020.xml: Corrected IEEE 1284 ID (RH
	  bug #162666).

2005-07-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Gestetner-DSc424_PS.xml,
	  printer/Gestetner-DSc428_PS.xml,
	  printer/Gestetner-DSc432_PS.xml,
	  printer/Gestetner-DSc435_PS.xml,
	  printer/Gestetner-DSc445_PS.xml,
	  printer/Gestetner-DSm415_PS.xml,
	  printer/Gestetner-P7527n_PS.xml, printer/Gestetner-P7527_PS.xml,
	  printer/Gestetner-P7535n_PS.xml, printer/Gestetner-P7575_PS.xml,
	  printer/Infotec-IS_2215_PS.xml,
	  printer/Infotec-ISC_1024c_PS.xml,
	  printer/Infotec-ISC_1032c_PS.xml,
	  printer/Infotec-ISC_2428_PS.xml,
	  printer/Infotec-ISC_2835_PS.xml,
	  printer/Infotec-ISC_3545_PS.xml, printer/Lanier-LD015_PS.xml,
	  printer/Lanier-LD124c_PS.xml, printer/Lanier-LD132c_PS.xml,
	  printer/Lanier-LD328c_PS.xml, printer/Lanier-LD335c_PS.xml,
	  printer/Lanier-LD345c_PS.xml,
	  printer/Lanier-LP127n_LP128n_PS.xml,
	  printer/Lanier-LP128_PS.xml, printer/Lanier-LP135n_PS.xml,
	  printer/Lanier-LP175_LP175hdn_PS.xml, printer/NRG-DSc424_PS.xml,
	  printer/NRG-DSc428_PS.xml, printer/NRG-DSc432_PS.xml,
	  printer/NRG-DSc435_PS.xml, printer/NRG-DSc445_PS.xml,
	  printer/NRG-DSm415_PS.xml, printer/NRG-P7527n_PS.xml,
	  printer/NRG-P7527_PS.xml, printer/NRG-P7535n_PS.xml,
	  printer/NRG-P7575_PS.xml, printer/Ricoh-Aficio_1515_PS.xml,
	  printer/Ricoh-Aficio_3224C_PS.xml,
	  printer/Ricoh-Aficio_3228C_PS.xml,
	  printer/Ricoh-Aficio_3232C_PS.xml,
	  printer/Ricoh-Aficio_3235C_PS.xml,
	  printer/Ricoh-Aficio_3245C_PS.xml,
	  printer/Ricoh-Aficio_AP410N_PS.xml,
	  printer/Ricoh-Aficio_AP410_PS.xml,
	  printer/Ricoh-Aficio_AP610N_PS.xml,
	  printer/Ricoh-Aficio_AP900_PS.xml, printer/Savin-3515_PS.xml,
	  printer/Savin-C2410_PS.xml, printer/Savin-C2824_PS.xml,
	  printer/Savin-C3210e_PS.xml, printer/Savin-C3528_PS.xml,
	  printer/Savin-C4535_PS.xml, printer/Savin-MLP28n_PS.xml,