@@ -21,7 +21,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>OfficeJet G55</model>
+      <description>Hewlett-Packard OfficeJet G Series</description>
+      <commandset>MLC,PCL,PML,SCL</commandset>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
