@@ -1,3 +1,8 @@
+2005-07-11  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-OfficeJet_G55.xml: Added IEEE 1284 information (RH
+	  bug #162867).
+
 2005-07-07  Tim Waugh <twaugh@redhat.co m>
 
 	* printer/HP-LaserJet_3020.xml: Corrected IEEE 1284 ID (RH
